--- a/CUBISWORLD.html
+++ b/CUBISWORLD.html
@@ -32,7 +32,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="CUBISWORLD.html" data-home-page-title="CUBISWORLD" class="u-body"><header class="u-clearfix u-header u-header" id="sec-3375"><div class="u-clearfix u-sheet u-sheet-1"></div></header>
+  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-3375"><div class="u-clearfix u-sheet u-sheet-1"></div></header>
     <section class="u-align-center u-clearfix u-section-1" id="sec-60fd">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-clearfix u-expanded-width u-gutter-10 u-layout-wrap u-layout-wrap-1">
