--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <div class="u-layout-row">
                   <div class="u-container-style u-image u-layout-cell u-size-30 u-image-1" data-image-width="1461" data-image-height="1014" data-href="www.cubis.photo" data-target="_blank">
                     <div class="u-border-2 u-border-black u-container-layout u-valign-middle u-container-layout-1">
-                      <a href="http://www.cubis.photo" class="u-align-center u-border-2 u-border-black u-btn u-button-style u-hover-black u-text-black u-text-hover-white u-white u-btn-1" target="_blank">CUBIS.PHOTO</a>
+                      <a href="http://www.cubis.photo" class="u-align-center u-border-2 u-border-black u-btn u-button-style u-hover-black u-text-black u-text-hover-white u-white u-btn-1" target="https://raw.githubusercontent.com/cubisworld/cubisworld.github.io/main/images/cubisphotolink.jpg">CUBIS.PHOTO</a>
                     </div>
                   </div>
-                  <div class="u-align-left u-container-style u-image u-layout-cell u-size-30 u-image-2" data-image-width="1080" data-image-height="884" data-href="www.cubis.art" data-target="_blank">
+                  <div class="u-align-left u-container-style u-image u-layout-cell u-size-30 u-image-2" data-image-width="1080" data-image-height="884" data-href="www.cubis.art" data-target="https://raw.githubusercontent.com/cubisworld/cubisworld.github.io/main/images/183098885_309292883980359_4148719010493077696_n.jpg">
                     <div class="u-border-2 u-border-black u-container-layout u-valign-middle u-container-layout-2">
                       <a href="http://www.cubis.art" class="u-align-center u-border-2 u-border-black u-btn u-button-style u-hover-black u-text-black u-text-hover-white u-white u-btn-2" target="_blank">CUBIS.ART</a>
                     </div>
